# pyramecium-technology-models

./: .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: check-code.yml  check_code.yml  checks.yml  create-release.yml  create_release.yml  release.yml  test-code.yml  test_code.yml  tests.yml
data/: deftechs.yml  evs.feather
data/household/dickert/: hh1.json  hh2.json  hh3.json  hh4.json  hh5.json  hh6.json
data/household/vdi4655/: e_profile_MFH_EH_15m.json  e_profile_OFH_EH_15m.json  e_profile_OFH_LEH_15m.json  factors_MFH_EH.json  factors_OFH_EH.json  factors_OFH_LEH.json  type_days.json
data/mastr/: 20210727-EinheitenWindOffshore_stripped.parquet.gzip  20210727-EinheitenWindOnshore_stripped.parquet.gzip
data/wind/: turbines.feather
examples/: simple_german.ipynb
pstm/: base.py  demand.py  ev.py  generation.py  heat_pump.py  household_vdi4655.py  mastr_converter.py  pv.py  wind.py
pstm/dickert/: appliance.py  appliances.py  baseline_profile.py  baseline_profiles.py  cycle_profile.py  cycle_profiles.py  household.py  households.py  lighting_profiles.py  on_off_profiles.py  process_profiles.py
pstm/utils/: dates.py  geo.py  weather.py
src/pstm/: __init__.py  __version__.py  base.py  demand.py  ev.py  gas_boiler.py  generation.py  heat_pump.py  household_vdi4655.py  mastr.py  mastr_converter.py  p2h.py  pv.py  storage.py  wind.py
src/pstm/dickert/: appliances.py  baseline_profiles.py  cycle_profiles.py  households.py  lighting_profiles.py  on_off_profiles.py  process_profiles.py
src/pstm/utils/: __init__.py  dates.py  exceptions.py  geo.py  roughness_lengths.py  weather.py
tests/: test_storage.py
tools/: __init__.py  convert_clc_europe_file.py  convert_dwd_try_files.py  create_dickert_households.py  create_dwd_try_index_file.py
utils/: __init__.py  convert_clc_europe_file.py  convert_dwd_try_files.py  convert_time_zones_file.py  convert_zip_codes_file.py  create_dickert_households.py  create_dwd_try_index_file.py
